--- a/app/templates/series_toc.html
+++ b/app/templates/series_toc.html
@@ -20,21 +20,21 @@
 		<div class="toc_body">
 			<div class="toc_menu_listing">
 				<div class="toc_menu_options">
-					<button type="button" class="btn btn-outline-success superpanel_menu_btn" id="jump_to_curr_btn" title="Jump to the chapter you left off">
+					<button type="button" class="btn btn-success superpanel_menu_btn" id="jump_to_curr_btn" title="Jump to the chapter you left off">
 						<ion-icon name="code-download-outline"></ion-icon>
 						<span>Current</span>
 					</button>
-					<button type="button" class="btn btn-outline-warning superpanel_menu_btn" id="update_series_btn" title="Fetch the latest chapter"
+					<button type="button" class="btn btn-yellow superpanel_menu_btn" id="update_series_btn" title="Fetch the latest chapter"
 						action="{{url_for('library_series_update', series_code=series.code)}}">
 						<ion-icon name="sync-outline"></ion-icon>
 						<span>Update</span>
 					</button>
-					<button type="button" class="btn btn-outline-primary superpanel_menu_btn" id="series_dictionary_btn" title="Edit this series' dictionary"
+					<button type="button" class="btn btn-amber superpanel_menu_btn" id="series_dictionary_btn" title="Edit this series' dictionary"
 						action="{{url_for('library_series_update', series_code=series.code)}}">
 						<ion-icon name="reader-outline"></ion-icon>
 						<span>Dictionary</span>
 					</button>
-					<button type="button" class="btn btn-outline-danger superpanel_menu_btn" id="rmv_all_bkmk_btn" title="Remove all bookmarks under this series"
+					<button type="button" class="btn btn-danger superpanel_menu_btn" id="rmv_all_bkmk_btn" title="Remove all bookmarks under this series"
 						action="{{url_for('library_series_toc_bookmark_all', series_code=series.code)}}">
 						<ion-icon name="bookmarks" style="font-size: 1rem; margin-bottom: -0.1rem;"></ion-icon>
 						<span>Remove All Bookmarks</span>
@@ -52,6 +52,8 @@
 
 			<!-- Mainpanel -->
 			<div class="toc_main" id="toc_mainpanel">
+				<div class="toc_pagination">
+				</div>
 				<div class="toc_chapter_listing">
 					{% if series.latest_ch == 0 %}
 						<!-- No chapters to display -->
