--- a/app/templates/modals/edit_novel.html
+++ b/app/templates/modals/edit_novel.html
@@ -2,16 +2,16 @@
 <div class="modal fade" id="edit_modal_push" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-lg modal-notify modal-info" role="document">
     <!-- Modal Form Content-->
-    <form class="modal-content text-center modal-cust edit_modal_cust" id="edit_novel_form" action="{{ url_for('library_edit_novel', series_code='UNDEF') }}">
+    <form class="modal-content text-center modal_cust edit_modal_cust" id="edit_novel_form" action="{{ url_for('library_edit_novel', series_code='UNDEF') }}">
       <!--Modal Header-->
-      <div class="modal-header d-flex justify-content-center">
-        <p class="modal_header_cust edit_novel_header"> Edit this Novel </p>
+      <div class="modal-header modal_header_cust d-flex justify-content-center" id="edit_novel_header">
+        <p style="margin: 0.5rem 0"> Edit this Novel </p>
       </div>
 
       <!--Modal Body-->
       <div class="modal-body modal_body_cust">
           {{ form.hidden_tag() }}
-          <fieldset class="form-group">
+          <fieldset class="form-group" style="margin: 0">
             <div class="form-group form_group_cust">
               {{ form.title.label(class="form-control-label label_cust") }}
               <div class="form_input_div">
@@ -28,12 +28,12 @@
       </div>
 
       <!--Modal Footer-->
-      <div class="modal-footer flex-center">
+      <div class="modal-footer flex">
         <div class="spinner-border text-success mx-3 spinner_cust" role="status" id="edit_novel_spinner">
           <span class="sr-only"></span>
         </div>
-        {{ form.submit(class="btn btn-success btn-cust", id="edit_novel_submit_btn") }}
-        <button class="btn btn-outline-danger btn-cust" data-dismiss="modal"> Cancel </button>
+        {{ form.submit(class="btn btn-success btn_cust", id="edit_novel_submit_btn") }}
+        <button class="btn btn-outline-danger btn_cust" data-dismiss="modal"> Cancel </button>
       </div>
 
     </form>
