--- a/app/templates/modals/remove_novel.html
+++ b/app/templates/modals/remove_novel.html
@@ -2,19 +2,19 @@
 <div class="modal fade" id="remove_modal_push" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-lg modal-notify modal-info" role="document">
     <!-- Modal Form Content-->
-    <form class="modal-content text-center modal-cust remove_modal_cust" id="remove_novel_form" action="{{ url_for('library_remove_novel', series_code='UNDEF') }}">
+    <form class="modal-content text-center modal_cust remove_modal_cust" id="remove_novel_form" action="{{ url_for('library_remove_novel', series_code='UNDEF') }}">
       <!--Modal Header-->
-      <div class="modal-header d-flex justify-content-center bg-danger">
-        <p class="modal_header_cust remove_novel_header"> Remove this Novel </p>
+      <div class="modal-header modal_header_cust d-flex justify-content-center" id="remove_novel_header">
+        <p style="margin: 0.5rem 0"> Remove this Novel </p>
       </div>
 
       <!--Modal Body-->
       <div class="modal-body modal_body_cust">
           {{ form.hidden_tag() }}
-          <div class="form-group">
+          <div class="form-group" style="margin: 0">
             <div class="text-danger text-center remove_warning_div">
               <ion-icon name="warning-outline"></ion-icon>
-              This action cannot be reversed! You will need to re-register this novel by its code!
+              This action cannot be reversed! You will need to re-register this novel by its host and code!
             </div>
             <div style="display: flex; flex-direction: column;">
               {{ form.opt_keep_dict.label(class="form-control-label") }}
@@ -24,12 +24,12 @@
       </div>
 
       <!--Modal Footer-->
-      <div class="modal-footer flex-center">
+      <div class="modal-footer flex">
         <div class="spinner-border text-success mx-3 spinner_cust" role="status" id="remove_novel_spinner">
           <span class="sr-only"></span>
         </div>
-        {{ form.submit(class="btn btn-danger btn-cust", id="remove_novel_submit_btn") }}
-        <button class="btn btn-outline-danger btn-cust" data-dismiss="modal"> Cancel </button>
+        {{ form.submit(class="btn btn-danger btn_cust", id="remove_novel_submit_btn") }}
+        <button class="btn btn-outline-danger btn_cust" data-dismiss="modal"> Cancel </button>
       </div>
 
     </form>
