Trivial css fixes
- Added super navpanel to chapter route
- Some small CSS tweaks and refactor

--- a/app/templates/super_navpanel.html
+++ b/app/templates/super_navpanel.html
@@ -13,7 +13,7 @@
 			<ion-icon name="reader"></ion-icon>
 		</a>
 		<a role="button" class="btn btn-elegant btn-sm super_navpanel_btn" id="super_navpanel_back_btn"
-			href="{{back_href}}" style="border-radius: 0 !important; margin-left: 1.5rem">
+			href="{{back_href}}">
 			<span> Back </span>
 		</a>
 	</div>
