--- a/app/static/main.css
+++ b/app/static/main.css
@@ -785,7 +785,7 @@ section.section_library{
   box-shadow: none !important;
 }
 .chapter_toolbelt_btn:hover{
-  filter: brightness(1.1);
+  filter: brightness(1.3);
 }
 .content_title_div{
   border-top: 1px solid #9a9a9a;
@@ -842,13 +842,13 @@ section.section_library{
 .chapter_image_div{
   width: 100%;
 }
-.chapter_day_night_toggle_btn{
+#day_night_toggle_btn{
   color: #fff;
   background-color: var(--chapter_day_night_toggle_btn_color);
   border-color: var(--chapter_day_night_toggle_btn_color);
 }
-.chapter_day_night_toggle_btn:hover{
-  filter: brightness(1.2);
+#day_night_toggle_btn:hover{
+  filter: brightness(1.1) !important;
 }
 .word{
   font-variant: petite-caps;
