--- a/app/templates/modals/edit_novel.html
+++ b/app/templates/modals/edit_novel.html
@@ -33,7 +33,7 @@
           <span class="sr-only"></span>
         </div>
         {{ form.submit(class="btn btn-success btn_cust", id="edit_novel_submit_btn") }}
-        <button class="btn btn-outline-danger btn_cust" data-dismiss="modal"> Cancel </button>
+        <button class="btn btn-outline-danger btn_cust modal_cancel_btn" data-dismiss="modal"> Cancel </button>
       </div>
 
     </form>
