--- a/app/templates/modals/remove_novel.html
+++ b/app/templates/modals/remove_novel.html
@@ -28,8 +28,8 @@
         <div class="spinner-border text-success mx-3 spinner_cust" role="status" id="remove_novel_spinner">
           <span class="sr-only"></span>
         </div>
-        {{ form.submit(class="btn btn-danger btn_cust", id="remove_novel_submit_btn") }}
-        <button class="btn btn-outline-danger btn_cust" data-dismiss="modal"> Cancel </button>
+        {{ form.submit(class="btn btn_cust", id="remove_novel_submit_btn") }}
+        <button class="btn btn-outline-danger btn_cust modal_cancel_btn" data-dismiss="modal"> Cancel </button>
       </div>
 
     </form>
