--- a/app/templates/super_navpanel.html
+++ b/app/templates/super_navpanel.html
@@ -1,15 +1,15 @@
 {% macro super_navpanel(back_href) %}
 	<div class="super_navpanel">
 		<a role="button" class="btn btn-sm super_navpanel_btn" id="super_navpanel_home_btn"
-			href="{{url_for('index')}}">
+			href="{{url_for('index')}}" title="Home">
 			<ion-icon name="home"></ion-icon>
 		</a>
 		<a role="button" class="btn btn-sm super_navpanel_btn" id="super_navpanel_library_btn"
-			href="{{url_for('library')}}">
+			href="{{url_for('library')}}" title="Library">
 			<ion-icon name="book"></ion-icon>
 		</a>
 		<a role="button" class="btn btn-sm super_navpanel_btn" id="super_navpanel_dictionary_btn"
-			href="{{url_for('dictionaries')}}">
+			href="{{url_for('dictionaries')}}" title="Dictionaries">
 			<ion-icon name="reader"></ion-icon>
 		</a>
 		<a role="button" class="btn btn-elegant btn-sm super_navpanel_btn" id="super_navpanel_back_btn"
